--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "rxjs": "^5.0.1"
   },
   "devDependencies": {
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "rxjs": "^5.0.1"
   }
 }
